# p2pgo

./: .gitignore  CLEANUP_TASKS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_GUIDE.md  FEDERATED_LEARNING_ARCHITECTURE.md  FEDERATED_LEARNING_PLAN.md  FILE_ORGANIZATION_SPEC.md  IMPLEMENTATION_ROADMAP.md  IROH_V35_PROGRESS.md  IROH_V35_UPDATES.md  LAUNCH_SUMMARY.md  LICENSE  MVP_COMPLETION.md  MVP_INTERNET_COMPLETE.md  MVP_SPRINT_COMPLETE.md  Makefile  NEXT_STEPS.md  P2P Go.dmg.sha256  P2PGo-Offline-1.0.0.dmg.unsigned  PROFESSIONALIZATION_PLAN.md  PROFESSIONAL_IMPROVEMENTS.md  PROFESSIONAL_STATUS.md  PROJECT_FOCUS.md  QUALITY_REPORT.md  README.md  RELAY_FEDERATION_SPEC.md  RELAY_IMPLEMENTATION_COMPLETE.md  RELAY_ROBUSTNESS_SPRINT.md  UI_ARCHITECTURE.md  UI_FIXES_PLAN.md  UI_IMPROVEMENTS_SUMMARY.md  analyze_ko.sh  benchmark_network.sh  bootstrap_first_relay.sh  build_clean_dmg.sh  build_demo_dmg.sh  build_fixed_ui.sh  build_standalone.sh  build_universal.sh  (+13 more)
.cargo/: config.toml  dist.toml
archive/: 3D_GO_DESIGN.md  Burn.md  (+37 more)
cli/: Cargo.toml
cli/src/: lib.rs  log_streamer.rs  main.rs  render.rs
cli/tests/: e2e_multiplayer.rs
core/: Cargo.toml
core/src/: archiver.rs  board.rs  burn_engine.rs  burn_trainer.rs  cbor.rs  color_constants.rs  engine.rs  ko_detector.rs  ko_generator.rs  lib.rs  logging.rs  rules.rs  scoring.rs  sgf.rs  sgf_parser.rs  training_pipeline.rs  value_labeller.rs
core/tests/: cbor_roundtrip.rs  comprehensive_tests.rs  dataset_loader.rs  engine_tests.rs  hash_chain_test.rs  model_forward.rs  move_hash.rs  quantize.rs  rules_tests.rs  scoring_tests.rs  sgf_tests.rs  signature_tests.rs
ml_models/sword_net/: Cargo.toml
ml_models/sword_net/src/: lib.rs
network/: Cargo.toml
network/fuzz/: Cargo.toml
network/fuzz/fuzz_targets/: stack_desync.rs
network/src/: archive.rs  auto_update.rs  behaviour.rs  benchmark.rs  blob_store.rs  bootstrap.rs  bootstrap_relay.rs  circuit_relay_v2.rs  config.rs  connection_manager.rs  crash_logger.rs  dex.rs  djed.rs  game_channel.rs  game_channel_old.rs  game_classifier.rs  game_discovery.rs  gossip_compat.rs  guilds.rs  health.rs  iroh_endpoint.rs  lib.rs  lobby.rs  marketplace.rs  message_security.rs  net_util.rs  neural_marketplace.rs  p2p_behaviour.rs  p2p_behaviour_simple.rs  p2p_integration.rs  p2p_node.rs  port.rs  relay_config.rs  relay_mesh.rs  relay_monitor.rs  relay_node.rs  relay_provider.rs  relay_robustness.rs  relay_server.rs  rna.rs  (+4 more)
network/src/game_channel/: core.rs  crypto.rs  messages.rs  mod.rs  networking.rs  registry.rs  state.rs  storage.rs  sync.rs
network/src/protocols/: game_sync.rs  mod.rs  peer_discovery.rs  relay_negotiation.rs
network/tests/: README.md  ack_timeout.rs  archive_rotate.rs  basic_move_test.rs  blob_store_tests.rs  check_docs_api.rs  check_iroh_docs_api.rs  color_transition_test.rs  debug_gossip_simple.rs  doc_sync.rs  duplicate_delivery.rs  duplicate_flood.rs  duplicate_move_delivery.rs  e2e_network_test.rs  embedded_relay.rs  event_structure_check.rs  explore_iroh_docs_35.rs  first_stone_sync.rs  game_channel_tests.rs  gossip_api_exploration.rs  gossip_roundtrip.rs  iroh_endpoint_live.rs  iroh_gossip_game_advertisement.rs  iroh_move_sync.rs  iroh_ticket_roundtrip.rs  lobby_smoke.rs  lobby_tests.rs  network_relay.rs  port.rs  property_reorder.rs  relay_bootstrap.rs  relay_limits.rs  relay_monitor_test.rs  relay_roundtrip.rs  scoring_sync_test.rs  snapshot_cadence.rs  spawn_cancelable.rs  test_summary.rs  ticket_has_relay.rs  ticket_roundtrip.rs  (+1 more)
network/tests/common/: mod.rs  test_utils.rs
neural/: Cargo.toml
neural/examples/: convert_sgf_to_cbor.rs
neural/src/: cbor_format.rs  cbor_training.rs  config.rs  federated.rs  lib.rs  neural_trainer.rs  policy.rs  relay_net.rs  simple_net.rs  storage.rs  value.rs
neural/src/training/: README.md  mod.rs  sgf_to_cbor.rs
neural/tests/: sgf_to_cbor_test.rs
tests/integration/: Cargo.toml
tests/integration/src/: discovery.rs  end_to_end_sgf_test.rs  lib.rs  network_visualization.rs  neural_training.rs  rna_propagation.rs  sgf_training.rs  test_helpers.rs
tools/: Cargo.toml
tools/src/: ko_analyzer.rs  ko_analyzer_simple.rs
trainer/: Cargo.toml
trainer/src/: lib.rs
trainer/tests/: dataset_filter.rs  train_smoke.rs
ui-clean/: Cargo.toml
ui-clean/src/: game.rs  main.rs  network.rs  ui.rs
ui-egui/: Cargo.toml  build.rs
ui-egui/examples/: test_update_checker.rs  ui_customization.rs
ui-egui/src/: app.rs  board_widget.rs  bootstrap_status.rs  clipboard_helper.rs  connection_status.rs  dark_theme.rs  design_system.rs  dual_heat_map.rs  enhanced_lobby.rs  error_logger.rs  game_activity_logger.rs  go3d.rs  go3d_wireframe.rs  heat_map.rs  heat_map_integration.rs  labeled_input.rs  lib.rs  lobby.rs  main.rs  msg.rs  network_panel.rs  network_visualization.rs  neural_animation.rs  neural_config_ui.rs  neural_game_ui.rs  neural_overlay.rs  neural_placeholder.rs  neural_training_ui.rs  neural_visualization.rs  offline_game.rs  sgf_training_ui.rs  sgf_upload.rs  sound_manager.rs  stone_animation.rs  test_util.rs  toast_manager.rs  training_visualization.rs  ui_config.rs  update_checker.rs  update_ui.rs  (+2 more)
ui-egui/src/components/: mod.rs
ui-egui/src/components/board/: interaction.rs  mod.rs  renderer.rs
ui-egui/src/components/game/: controls.rs  mod.rs  status.rs
ui-egui/src/components/network/: connection_status.rs  mod.rs  peer_list.rs
ui-egui/tests/: auto_refresh.rs  basic_test.rs  clipboard_test.rs  e2e_headless.rs  e2e_network_test.rs  game_simulation.rs  ghost_overlay.rs  gui_e2e.rs  integration_test.rs  network_panel_test.rs  network_ui_integration.rs  pair_gui.rs  score_accept_integration.rs  score_dialog.rs  single_headless.rs  stub_test.rs  tag_popup.rs
ui-v2/: Cargo.toml
ui-v2/src/: lib.rs  main.rs  main_wrapper.rs
ui-v2/src/app/: app.rs  mod.rs  router.rs
ui-v2/src/core/: button.rs  card.rs  input.rs  mod.rs  theme.rs
ui-v2/src/features/: game_view.rs  lobby_view.rs  mod.rs  training_view.rs
ui-v2/src/training/: mod.rs
ui-v2/src/widgets/: board_widget.rs  mod.rs  neural_panel.rs
(+78 files in other folders)
