[package]
name = "p2pgo"
version = "0.1.4"
edition = "2021"
authors = ["p2pgo developers"]
license = "MIT OR Apache-2.0"
description = "Peer-to-peer Go (囲碁) over libp2p"
homepage = "https://p2pgo.io"
repository = "https://github.com/danielbank/p2pgo"

[dependencies]
p2pgo-core = { path = "core" }
p2pgo-network = { path = "network" }
libp2p = { version = "0.53", features = ["kad", "gossipsub", "relay", "noise", "yamux", "tcp", "dns", "mdns", "macros", "tokio"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
egui = "0.27"
eframe = "0.27"

[workspace]
resolver = "2"
members = [
    "core",
    "network", 
    "ui-egui",
    "cli",
    "neural",
    "ui-clean",
    "ui-v2"
    # "trainer",
    # "tools",
    # "ml_models/sword_net",
    # "ml_models/shield_net"
]
exclude = ["tmp"]

# Workspace-wide features
[workspace.package]
version = "0.1.4"
edition = "2021"
authors = ["p2pgo developers"]
license = "MIT OR Apache-2.0"
rust-version = "1.65"  # Stable Rust
description = "Peer-to-peer Go (囲碁) over iroh relays"
homepage = "https://p2pgo.io"
repository = "https://github.com/danielbank/p2pgo"

[workspace.dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
egui = "0.27"
eframe = "0.27"
# Iroh dependencies removed - using libp2p instead
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
once_cell = "1"  # For lazy_static-like functionality
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_repr = "0.1"
bincode = "1.3"
burn = { version = "0.17.1", features = ["wgpu", "train", "dataset"] }
burn-dataset = "0.17.1"
burn-tch = "0.17.1"
wasmtime = { version = "24", features = ["cranelift"] }
ciborium = "0.2"
ndarray = "0.15"
parking_lot = "0.12"
tempfile = "3.0"
blake3 = "1.5"
base64 = "0.22"
bytes = "1.7"
rand = "0.8"

# Workspace features are defined in individual crates

# Note: We can't define workspace-wide features directly
# Use individual crate features instead

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[[example]]
name = "p2p_demo"
path = "examples/p2p_demo.rs"

[[example]]
name = "simple_p2p_go"
path = "examples/simple_p2p_go.rs"

[[example]]
name = "relay_selection_demo"
path = "examples/relay_selection_demo.rs"

[[bin]]
name = "quick_demo"
path = "quick_demo.rs"
