# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "p2pgo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_cbor = "0.11"
serde_repr = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = []
bot = []
