# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "p2pgo-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core game logic for P2P Go"
homepage = "https://p2pgo.io"
repository = "https://github.com/danielbank/p2pgo"

[dependencies]
serde = { workspace = true }
serde_cbor = "0.11"
serde_repr = "0.1"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
flate2 = "1.0.28"
ed25519-dalek = { version = "2.1", features = ["serde"] }
hex = "0.4"
# ML and WASM dependencies
burn = { workspace = true, optional = true }
burn-dataset = { workspace = true, optional = true }
wasmtime = { workspace = true }
ciborium = { workspace = true }
ndarray = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["burn"]
bot = []
burn = ["dep:burn", "dep:burn-dataset"]
