# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "p2pgo-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Peer-to-peer networking for P2P Go"
homepage = "https://p2pgo.io"
repository = "https://github.com/danielbank/p2pgo"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
flume = "0.10"
serde_cbor = { workspace = true }
serde_json = "1.0"
bincode = "1.3"
hex = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dirs = "5.0"
futures-lite = "2.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
toml = "0.8"
iroh = { workspace = true, optional = true, features = ["metrics"] }
iroh-docs = { workspace = true, optional = true, features = ["engine", "net"] }
iroh-gossip = { workspace = true, optional = true, features = ["net"] }
iroh-blobs = { workspace = true, optional = true }
# We'll use our own core crate
p2pgo-core = { path = "../core" }

[features]
default = ["stub"]
stub = []
iroh = [
    "dep:iroh", 
    "dep:iroh-docs", 
    "dep:iroh-gossip", 
    "dep:iroh-blobs", 
    "tokio/rt-multi-thread"
]
# Enable debug functions for headless testing
headless = []

[dev-dependencies]
tempfile = { workspace = true }
