[package]
name = "p2pgo-neural"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Core types
p2pgo-core = { path = "../core" }

# Error handling
anyhow = "1.0"

# Utils
rand = "0.8"

# Logging
tracing = "0.1"

# Compression for network storage
flate2 = "1.0"

# Async runtime for training
tokio = { version = "1.0", features = ["rt", "macros"] }

# Time handling
chrono = "0.4"

# Hashing
sha2 = "0.10"

# Neural network framework (optional, for advanced features)
candle-core = { version = "0.3", optional = true }

[features]
default = []
candle = ["candle-core"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"