[package]
name = "p2pgo-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ko-analyzer"
path = "src/ko_analyzer_simple.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# Local dependencies
p2pgo-core = { path = "../core" }
p2pgo-sgf = { path = "../sgf" }
p2pgo-neural = { path = "../neural" }