[package]
name = "trainer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
burn = { workspace = true, features = ["wgpu", "train"] }
serde = { workspace = true }
serde_cbor = "0.11"
rand = "0.8"
burn-dataset = "0.17.1"
p2pgo-core = { path = "../core" }
tracing = "0.1"
tempfile = "3.6"
