[package]
name = "p2pgo-ui-clean"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.23"
egui = "0.23"
p2pgo-core = { path = "../core" }
p2pgo-neural = { path = "../neural" }
p2pgo-network = { path = "../network" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
rfd = "0.12"

[[bin]]
name = "p2pgo"
path = "src/main.rs"