# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "p2pgo-ui-egui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository = "https://github.com/danielbank/p2pgo"
default-run = "p2pgo-ui-egui"  # Use 'cargo run -p p2pgo-cli' to run the CLI instead
build = "build.rs"

# macOS bundle metadata for cargo-bundle
[package.metadata.bundle]
name = "P2P Go"
identifier = "io.p2pgo.desktop"
icon = ["../assets/appicon.icns"]
version = "0.1.0"
copyright = "Copyright (c) 2024 P2P Go Developers"
category = "public.app-category.games"
short_description = "Peer-to-peer Go (囲碁) over iroh relays"
long_description = """
P2P Go is a peer-to-peer Go (囲碁/Baduk/Weiqi) game that uses the Iroh
networking stack for multiplayer gameplay without central servers.
"""
minimum_system_version = "11.0"
deb_depends = []
osx_frameworks = []

[dependencies]
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { workspace = true }
egui = "0.23"
eframe = "0.23"
egui_plot = "0.23"
petgraph = "0.6"
crossbeam-channel = "0.5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
burn = { workspace = true, features = ["wgpu"] }
libp2p = { version = "0.53", features = ["kad", "gossipsub", "relay"] }
# Internal crates
p2pgo-core = { path = "../core" }
p2pgo-network = { path = "../network" }
# p2pgo-neural = { path = "../neural" }
trainer = { path = "../trainer" }
# Logging
flexi_logger = { version = "0.25", features = ["async", "compress"] }
tracing-error = "0.2"
# Clipboard support
arboard = { version = "3.3", optional = true }
# Additional UI components
egui_extras = "0.23"
env_logger = "0.10"
rand = "0.8"
chrono = "0.4"
rfd = "0.12"
dirs = "5.0"
# HTTP client for update checking
reqwest = { version = "0.11", features = ["json"], optional = true }

[features]
default = ["native", "stub", "arboard", "reqwest"]
native = ["eframe/default"]
headless = ["p2pgo-network/headless"]
iroh = ["p2pgo-network/iroh"]
stub = ["p2pgo-network/stub"]
offline = []

[[bin]]
name = "simple_ui"
path = "src/bin/simple_ui.rs"

[[bin]]
name = "p2pgo_main"
path = "src/bin/p2pgo_main.rs"

[[bin]]
name = "offline_game"
path = "src/bin/offline_game.rs"
required-features = ["native"]

[[bin]]
name = "go3d"
path = "src/bin/go3d.rs"
required-features = ["native"]

[[bin]]
name = "lichess_ui"
path = "src/bin/lichess_ui.rs"
required-features = ["native"]

[[bin]]
name = "p2pgo_clean"
path = "src/bin/p2pgo_clean.rs"
required-features = ["native"]

[[bin]]
name = "p2pgo_fixed"
path = "src/bin/p2pgo_fixed.rs"
