[package]
name = "p2pgo-ui-v2"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI framework
eframe = { version = "0.28", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["image"] }

# Core dependencies
p2pgo-core = { path = "../core" }
p2pgo-network = { path = "../network" }
p2pgo-neural = { path = "../neural" }
p2pgo-ui-egui = { path = "../ui-egui" }

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File dialogs
rfd = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time
chrono = "0.4"

# Random
rand = "0.8"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"